--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<SurfaceView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.opengl.GLSurfaceView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/surface_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-</SurfaceView>
+</android.opengl.GLSurfaceView>
